--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,14 @@
 	position: relative;
 }
 
-.pic2{
+.pic2,.pic3{
 	display: none;
 	position: relative;
     width: 300px;
     margin: 0px auto;
 }
 
-.pic2 img{
+.pic2 img,.pic3 img{
 	width: 300px;
 	height: 300px;
 	border-radius: 50%;
